      error if none or more than one (often unintend) is given
    - It defaults to the current directory if that is a Debian source package
    - The order of arguments is not relevant any more
    - Built vs. unbuilt tree is now automatically detected
    - The explicit --source, --click-source etc. options are gone, the type of
      tested source/binary packages is detected automatically
    The old "adt-run" CLI will still be available for some time.
    (Closes: #795274, LP: #1453509)

 -- Martin Pitt <mpitt@debian.org>  Sun, 05 Jun 2016 09:01:35 +0200

autopkgtest (3.20.9) unstable; urgency=medium

  * Fix "apt-get source" version detection for very old source packages that
    don't have "Package-List:" yet. (LP: #1588199)
  * Skip NullRunner.test_apt_source_nonexisting test instead of failing if
    there are no deb-src apt sources configured on the host.

 -- Martin Pitt <mpitt@debian.org>  Thu, 02 Jun 2016 22:22:45 +0200

autopkgtest (3.20.8) unstable; urgency=medium

  * adt-build-lxd: Fix "ADT_APT_PROXY: parameter not set" failure if host's
    apt proxy is not on localhost.
  * debian/tests/lxd: Set up LXD bridge, so that the test can actually work
    with current LXD.
  * Set $ADT_NORMAL_USER during tests that run as root.
  * Re-enable lxd autopkgtest, now that LP: #1557161 is fixed.
  * debian/tests/lxd: Enable MSS clamping, to work around broken PTMU in
    Canonical's Scalingstack: Avoids lost IP packets due to MTU mismatches.
  * adt-build-lx{c,d}: Pass on $MIRROR to setup-testbed.
  * adt-virt-qemu: Replace deprecated -redir QEMU option with
    "-net user,hostfwd=".
  * adt-buildvm-ubuntu-cloud: Provide more user friedly error if no image
    exists for the chosen release/architecture. (LP: #1586322)
  * Put back apt-cache showsrc --only-source option, as otherwise we'll catch
    binaries from unrelated sources. Add a fallback for Ubuntu 12.04 to re-try
    without --only-source.
