@@ -111,7 +111,7 @@ and with an ephemeral overlay for speed:
 
 .RS
 .EX
-autopkgtest \fIhello_2.8\-4.dsc\fR --- adt-virt-lxc -e \fIadt-sid\fR
+autopkgtest \fIhello_2.8\-4.dsc\fR -- adt-virt-lxc -e \fIadt-sid\fR
 .EE
 .RE
 
