@@ -127,7 +127,7 @@ and then run
 
 .RS
 .EX
-autopkgtest [...] --- adt-virt-qemu @sid-desktop.cfg
+autopkgtest [...] -- adt-virt-qemu @sid-desktop.cfg
 .EE
 .RE
 
@@ -229,7 +229,7 @@ Run the tests of the gdk-pixbuf source package, using an Ubuntu cloud image:
 
 .RS
 .EX
-autopkgtest gdk-pixbuf --- adt-virt-qemu adt-trusty-i386-cloud.img
+autopkgtest gdk-pixbuf -- adt-virt-qemu adt-trusty-i386-cloud.img
 .EE
 .RE
 
